# internal/api/response/category.go
@@ -1,0 +1,11 @@
+package response
+
+type Category struct {
+	ID   uint
+	Name string
+}
+
+type GetCategoryListResp struct {
+	List  []*Category
+	Total int
+}
